[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-devtools"
version = "0.1.0"
description = "Chrome DevTools for AI Agents - Real-time debugging, pause, inspect, and step through your AI agent execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AgentDBG Team" }
]
keywords = [
    "ai",
    "agents",
    "debugging",
    "observability",
    "llm",
    "openai",
    "anthropic",
    "langchain",
    "tracing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "websockets>=12.0",
    "aiosqlite>=0.19.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "wrapt>=1.15.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
agentdbg = "agentdbg.cli:main"

[project.urls]
Homepage = "https://github.com/Sigmabrogz/agent-devtools"
Documentation = "https://github.com/Sigmabrogz/agent-devtools#readme"
Repository = "https://github.com/Sigmabrogz/agent-devtools"
Issues = "https://github.com/Sigmabrogz/agent-devtools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdbg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=agentdbg --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.black]
line-length = 100
target-version = ["py39"]
